Changed save schema: RDB style -> JSON
